--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,10 +5,17 @@
 }
 
 body {
+  width: 100%;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 50px 10px;
   flex-direction: column;
   background-color: #ffffff;
+  font-style: medium;
+  font-weight: 500;
+  font-family: "Inter", sans-serif;
+  line-height: 16px;
+  letter-spacing: -0.4px;
 }
