--- a/src/css/SearchPanel.css
+++ b/src/css/SearchPanel.css
@@ -1,44 +1,76 @@
 /* From Uiverse.io by LightAndy1 */
 .search-group {
-    display: flex;
-    align-items: center;
-    position: relative;
-    max-width: 290px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  min-width: 290px;
 }
 
 .search-input {
-    width: 100%;
-    height: 45px;
-    padding: 12px;
-    padding-left: 44px;
-    border: 1px solid #F2F2F2;
-    border-radius: 12px;
-    background-color: #ffffff;
-    outline: none;
-    color: #bdbecb;
-    transition: all 0.5s ease;
-    cursor: text;
-    z-index: 0;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
-    letter-spacing: 0px;
+  width: 100%;
+  height: 45px;
+  padding: 12px;
+  padding-left: 44px;
+  border: 1px solid #f2f2f2;
+  border-radius: 12px;
+  background-color: #ffffff;
+  outline: none;
+  color: #bdbecb;
+  transition: all 0.5s ease;
+  cursor: text;
+  z-index: 0;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0px;
 }
 
 .search-input::placeholder {
-    color: #C6C6C6;
+  color: #c6c6c6;
 }
 
 .search-input:focus {
-    border: 1px solid #5F5F5F;
+  border: 1px solid #5f5f5f;
 }
 
 .search-icon {
-    position: absolute;
-    left: 12px;
-    fill: #5F5F5F;
-    width: 20px;
-    height: 20px;
-    pointer-events: none;
-    z-index: 1;
+  position: absolute;
+  left: 12px;
+  fill: #5f5f5f;
+  width: 20px;
+  height: 20px;
+  pointer-events: none;
+  z-index: 1;
+}
+
+.favorites {
+  border: 1px solid #f2f2f2;
+  border-radius: 12px;
+  padding: 12px;
+  gap: 8px;
+  position: relative;
+}
+
+.search {
+  display: flex;
+  gap: 12px;
+}
+
+.notif {
+  position: absolute;
+  border-radius: 100px;
+  padding: 4px;
+  gap: 10px;
+  min-width: 24px;
+  background-color: #46b0fb;
+  color: #fff;
+  left: -0.6rem;
+  top: -0.6rem;
+  font-size: 10px;
+  letter-spacing: 0px;
+  text-align: center;
+}
+
+.none {
+  display: none;
 }
