--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,7 +10,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 50px 10px;
+  padding: 50px 10px 0px 10px;
   flex-direction: column;
   background-color: #ffffff;
   font-style: medium;
