--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -5,6 +5,11 @@ footer {
   justify-content: space-between;
   width: 100%;
   padding: 20px 24px 24px 24px;
+  bottom: 0;
+  left: 0;
+  position: fixed;
+  background-color: #fff;
+  z-index: 1;
 }
 
 .icon {
