--- a/src/css/HomePage.css
+++ b/src/css/HomePage.css
@@ -1,9 +1,10 @@
 .navigation-bar {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   width: 100%;
+  gap: 15px;
 }
 
 .delivery-addr {
@@ -49,12 +50,33 @@
   color: #eb6c2e;
 }
 
+.control-title {
+  background: none;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.control-title > h2 {
+  color: #414141;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.control-title > span {
+  color: #8b8b8b;
+}
+
 .control-mode {
   padding: 3px 16px;
   gap: 10px;
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
   background-color: #f8f8f8;
   width: 100%;
   border-radius: 12px;
@@ -82,4 +104,9 @@
   background-color: #46b0fb;
   color: #fff;
   transition: all 0.5s ease;
+}
+
+.phar-map {
+  width: 100%;
+  height: 75vh;
 }
