--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,11 +6,11 @@
 
 body {
   width: 100%;
-  height: 100vh;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 50px 10px 0px 10px;
+  padding: 17px 17px 0px 17px;
   flex-direction: column;
   background-color: #ffffff;
   font-style: medium;
@@ -18,4 +18,6 @@ body {
   font-family: "Inter", sans-serif;
   line-height: 16px;
   letter-spacing: -0.4px;
+  gap: 20px;
+  padding-bottom: 12vh;
 }
