--- a/src/css/StrictCatalogSection.css
+++ b/src/css/StrictCatalogSection.css
@@ -1,8 +1,233 @@
 .strict-catalog {
-    display: grid;
-    grid-template-columns: repeat(2, auto);
-    grid-template-rows: auto;
-    grid-column-gap: 12px;
-    grid-row-gap: 20px;
-    width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  grid-template-rows: auto;
+  grid-column-gap: 12px;
+  grid-row-gap: 20px;
+  width: 100%;
+}
+
+.bar-catalog {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 25px;
+}
+
+.bar-title,
+.sort {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 8px;
+  cursor: pointer;
+}
+
+.bar-title > p {
+  font-size: 12px;
+  font-weight: 400;
+  color: #8e8e8e;
+}
+
+#sort {
+  border: none;
+  background: none;
+  color: #5f5f5f;
+  font-size: 12px;
+  font-weight: 400;
+  cursor: pointer;
+  width: 130px;
+}
+
+.modal-backdrop {
+  position: fixed;
+  inset: 0;
+  background: #00000080;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background: white;
+  width: 100%;
+  max-width: 500px;
+  border-radius: 20px 20px 0 0;
+  padding: 16px;
+  animation: slideUp 0.3s ease-out;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  max-height: 600px;
+  overflow: auto;
+}
+
+.modal-head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #414141;
+  width: 100%;
+}
+
+.modal-head > h1 {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.modal-head > button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+@keyframes slideUp {
+  from {
+    transform: translateY(100%);
+  }
+
+  to {
+    transform: translateY(0);
+  }
+}
+
+.modal-save {
+  width: 100%;
+  height: 48px;
+  color: #fff;
+  background-color: #46b0fb;
+  padding: 16px 0;
+  border-radius: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  font-weight: 600;
+  cursor: pointer;
+  border: none;
+}
+
+.modal-block {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  width: 100%;
+  flex-direction: column;
+  font-size: 13px;
+  line-height: 18px;
+  border-top: 1px solid #00000020;
+  padding: 20px 0;
+}
+
+.sort-form {
+  gap: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.sort-form > .inp-div {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  align-items: center;
+  cursor: pointer;
+  color: #8e8e8e;
+}
+
+.sort-form > .inp-div > input[type="radio"] {
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border: 1.5px solid #ccc;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  cursor: pointer;
+  transition: border 0.2s, background 0.2s;
+}
+
+.sort-form > .inp-div input[type="radio"]:checked {
+  background-color: #fff;
+  border: 1.5px solid #46b0fb;
+}
+
+/* ставим точку внутри при выборе */
+.sort-form > .inp-div input[type="radio"]:checked::after {
+  content: "";
+  position: relative;
+  width: 12px;
+  height: 12px;
+  background: #46b0fb;
+  border-radius: 50%;
+  /* top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); */
+}
+
+/* если radio выбран — меняем цвет текста label */
+.sort-form > .inp-div input[type="radio"]:checked + span,
+.sort-form > .inp-div:has(input[type="radio"]:checked) {
+  color: #414141;
+}
+
+.chapter {
+  width: 100%;
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.chapter-title {
+  font-size: 16px;
+  font-weight: 600;
+  color: #5f5f5f;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
+
+.chapter-block {
+  width: 100%;
+  height: auto;
+}
+
+.chapter-btn {
+  width: auto;
+  border-radius: 8px;
+  background-color: #f8f8f8;
+  padding: 10px 16px;
+  gap: 10px;
+  color: #1e1e1e;
+  font-size: 14px;
+  font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.chapter-btn-open {
+  width: auto;
+  border-radius: 8px;
+  background-color: #46b0fb;
+  padding: 10px 16px;
+  gap: 10px;
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
