--- a/src/css/HomePage.css
+++ b/src/css/HomePage.css
@@ -51,6 +51,13 @@
   color: #eb6c2e;
 }
 
+.navigation-title {
+  color: #414141;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+}
+
 .control-title {
   background: none;
   border: none;
