--- a/src/css/ProductPage.css
+++ b/src/css/ProductPage.css
@@ -183,6 +183,5 @@
   flex-direction: column;
   align-items: start;
   gap: 24px;
-  margin: auto;
-  margin-bottom: 80px;
+  margin-bottom: auto;
 }
