--- a/src/css/CardCatalog.css
+++ b/src/css/CardCatalog.css
@@ -4,7 +4,7 @@
   border-radius: 14px;
   gap: 10px;
   overflow: hidden;
-  background-color: #f9f9f9;
+  background-color: var(--inp-b);
   color: #2c2c2c;
   font-size: 12px;
   font-weight: 510;
@@ -12,6 +12,7 @@
 }
 
 .card-catalog > p {
+  color: var(--text);
   padding: 10px 12px;
   text-align: left;
 }
