--- a/src/css/CardStrictCatalog.css
+++ b/src/css/CardStrictCatalog.css
@@ -74,7 +74,7 @@
 .name {
   font-weight: 400;
   font-size: 12px;
-  color: #5f5f5f;
+  color: var(--text);
 }
 
 .weight {
@@ -115,7 +115,7 @@
 .price {
   font-weight: 600;
   font-size: 12px;
-  color: #5f5f5f;
+  color: var(--text);
 }
 
 .discount {
