--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -8,7 +8,7 @@ footer {
   bottom: 0;
   left: 0;
   position: fixed;
-  background-color: #fff;
+  background-color: var(--bg);
   z-index: 1;
 }
 
