--- a/src/css/RecommendedSection.css
+++ b/src/css/RecommendedSection.css
@@ -7,7 +7,7 @@
 }
 
 .recommended-title > h2 {
-  color: #5f5f5f;
+  color: var(--text);
   font-weight: 600;
   font-size: 16px;
   line-height: 22px;
