--- a/src/css/RegistrationPage.css
+++ b/src/css/RegistrationPage.css
@@ -25,7 +25,7 @@
 }
 
 .register-nav > h2 {
-  color: #2f2f2f;
+  color: var(--hh);
   font-weight: 600;
   font-size: 16px;
   margin: auto;
@@ -66,7 +66,7 @@
 .form-label > label > div > input {
   width: 100%;
   height: 44px;
-  color: #2f2f2f;
+  color: var(--hh);
   font-weight: 400;
   font-size: 16px;
   padding: 0 16px;
@@ -74,13 +74,13 @@
   flex-direction: row;
   align-items: center;
   border: none;
-  background-color: #f3f6fa;
+  background-color: var(--inp-b);
   border-radius: 16px;
 }
 
 .form-label > label > input:focus-visible,
 .form-label > label > div > input:focus-visible {
-  border: #2f2f2f solid 1px;
+  border: var(--border) solid 1px;
   outline: none;
 }
 
@@ -199,8 +199,8 @@
   border-radius: 16px;
   text-align: center;
   padding: 12px 0px;
-  background-color: #f3f6fa;
-  color: #000;
+  background-color: var(--inp-b);
+  color: var(--hh);
 }
 
 .pin-inp {
@@ -216,7 +216,7 @@
 }
 
 .sec-h {
-  color: #2f2f2f;
+  color: var(--hh);
   font-weight: 600;
   font-size: 20px;
 }
