--- a/src/css/StrictCatalogSection.css
+++ b/src/css/StrictCatalogSection.css
@@ -9,6 +9,7 @@
   grid-column-gap: 12px;
   grid-row-gap: 20px;
   width: 100%;
+  padding-bottom: 150px;
 }
 
 .bar-catalog {
@@ -32,7 +33,7 @@
 .bar-title > p {
   font-size: 12px;
   font-weight: 400;
-  color: #8e8e8e;
+  color: var(--text);
 }
 
 #sort {
@@ -56,7 +57,7 @@
 }
 
 .modal-content {
-  background: white;
+  background: var(--sec);
   width: 100%;
   max-width: 500px;
   border-radius: 20px 20px 0 0;
@@ -79,6 +80,7 @@
 }
 
 .modal-head > h1 {
+  color: var(--heading);
   font-size: 16px;
   font-weight: 600;
 }
@@ -142,7 +144,7 @@
   gap: 16px;
   align-items: center;
   cursor: pointer;
-  color: #8e8e8e;
+  color: var(--text);
 }
 
 .sort-form > .inp-div > input[type="radio"] {
@@ -194,7 +196,7 @@
 .chapter-title {
   font-size: 16px;
   font-weight: 600;
-  color: #5f5f5f;
+  color: var(--text);
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -213,10 +215,10 @@
 .chapter-btn {
   width: auto;
   border-radius: 8px;
-  background-color: #f8f8f8;
+  background-color: var(--inp-b);
   padding: 10px 14px;
   gap: 10px;
-  color: #1e1e1e;
+  color: var(--text);
   font-size: 14px;
   font-weight: 400;
   display: flex;
