--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,19 +3,30 @@
   --bg: #ffffff;
   --text: #5F5F5F;
   --heading: #414141;
+  --inp-b: #f8f8f8;
+  --sec: #fff;
+  --icon: #5f5f5f;
+  --border: #f2f2f2;
+  --hh: #2f2f2f;
 }
 
 /* Тёмная тема */
 [data-theme="dark"] {
   --bg: #1B1C1C;
-  --text: #fff;
-  --heading: #fff;
+  --text: #9FA5B2;
+  --heading: #2CAEFF;
+  --inp-b: #2C2C2E;
+  --sec: #333333;
+  --icon: #fff;
+  --border: #5f5f5f;
+  --hh: #fff;
 }
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  transition: color,background,background-color 0.5s ease;
 }
 
 body {
@@ -27,7 +38,7 @@ body {
   justify-content: space-between;
   padding: 10px 17px 0px 17px;
   flex-direction: column;
-  background-color: #ffffff;
+  background-color: var(--bg);
   font-style: medium;
   font-weight: 500;
   font-family: "Inter", sans-serif;
