--- a/src/css/CardCartSection.css
+++ b/src/css/CardCartSection.css
@@ -4,6 +4,7 @@
   gap: 20px;
   margin-bottom: auto;
   align-items: center;
+  padding-bottom: 10px;
 }
 
 .card-product-cart {
@@ -226,7 +227,7 @@ a:active {
   align-items: center;
   justify-content: space-between;
   width: 90vw;
-  max-width: 325px;
+  /* max-width: 325px; */
   bottom: 100px;
   z-index: 2;
   padding: 12px 20px;
