--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,7 @@
 /* Базовые переменные (светлая тема) */
 :root {
   --bg: #ffffff;
-  --text: #5F5F5F;
+  --text: #5f5f5f;
   --heading: #414141;
   --inp-b: #f8f8f8;
   --sec: #fff;
@@ -12,10 +12,10 @@
 
 /* Тёмная тема */
 [data-theme="dark"] {
-  --bg: #1B1C1C;
-  --text: #9FA5B2;
-  --heading: #2CAEFF;
-  --inp-b: #2C2C2E;
+  --bg: #1b1c1c;
+  --text: #9fa5b2;
+  --heading: #2caeff;
+  --inp-b: #2c2c2e;
   --sec: #333333;
   --icon: #fff;
   --border: #5f5f5f;
@@ -26,10 +26,20 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  transition: color,background,background-color 0.5s ease;
+  transition: color, background, background-color, filter 0.5s ease;
 }
 
 body {
+  width: 100%;
+  height: 1px;
+  min-height: 100vh;
+  font-style: medium;
+  font-weight: 500;
+  font-family: "Inter", sans-serif;
+  background-color: var(--bg);
+}
+
+.body {
   width: 100%;
   height: 1px;
   min-height: 100vh;
@@ -39,11 +49,8 @@ body {
   padding: 10px 17px 0px 17px;
   flex-direction: column;
   background-color: var(--bg);
-  font-style: medium;
-  font-weight: 500;
-  font-family: "Inter", sans-serif;
   line-height: 16px;
   letter-spacing: -0.4px;
   gap: 20px;
-  padding-bottom: 11vh;
+  padding-bottom: 150px;
 }
