--- a/src/css/SearchPanel.css
+++ b/src/css/SearchPanel.css
@@ -71,6 +71,14 @@
   font-size: 10px;
   letter-spacing: 0px;
   text-align: center;
+  animation: fadeIn 0.5s ease-out forwards;
+  opacity: 0;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
 }
 
 .none {
