--- a/src/css/index.css
+++ b/src/css/index.css
@@ -31,17 +31,20 @@
 
 body {
   width: 100%;
-  height: 1px;
+  height: auto;
   min-height: 100vh;
   font-style: medium;
   font-weight: 500;
   font-family: "Inter", sans-serif;
   background-color: var(--bg);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .body {
   width: 100%;
-  height: 1px;
+  height: auto;
   min-height: 100vh;
   display: flex;
   align-items: center;
